Correct tag background

--- a/content/themes/sentinel-21/tag.hbs
+++ b/content/themes/sentinel-21/tag.hbs
@@ -9,6 +9,7 @@
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
+          <div class="main-header-background">
             <h1 class="page-title">{{tag.name}}</h1>
             <h2 class="page-description">
                 {{#if tag.description}}
@@ -17,6 +18,7 @@
                     A {{pagination.total}}-post collection
                 {{/if}}
             </h2>
+          </div>
         </div>
     </div>
 </header>
