--- a/content/themes/sentinel-21/assets/css/screen.css
+++ b/content/themes/sentinel-21/assets/css/screen.css
@@ -906,6 +906,19 @@ body:not(.post-template) .post-title {
     margin: 0 -13%;
 }
 
+figure .image {
+    background: #F8F8F8;
+    width: 120%;
+    padding: 3% 3% 1% 3%;
+    margin: 2% 0;
+    border: 1px solid #d8d8d8;
+}
+
+figcaption {
+    text-align: center;
+    font-style: italic;
+}
+
 /* The author credit area after the post */
 .post-footer {
     position: relative;
