--- a/content/themes/sentinel-21/assets/css/screen.css
+++ b/content/themes/sentinel-21/assets/css/screen.css
@@ -903,7 +903,7 @@ body:not(.post-template) .post-title {
 .post-content .full-img {
     width: 126%;
     max-width: none;
-    margin: 0 -13%;
+    /*margin: 0 -13%; commented for captioning*/
 }
 
 figure.image {
@@ -912,6 +912,10 @@ figure.image {
     padding: 3% 3% 1% 3%;
     margin: 2% 0;
     border: 1px solid #d8d8d8;
+}
+
+figure img {
+  border: 1px solid #ccc;
 }
 
 figcaption {
