--- a/content/themes/sentinel-21/assets/css/screen.css
+++ b/content/themes/sentinel-21/assets/css/screen.css
@@ -895,7 +895,8 @@ body:not(.post-template) .post-title {
     max-width: 100%;
     height: auto;
     margin: 0 auto;
-    padding: 0.6em 0;
+    /*padding: 0.6em 0; Commented for captioning */
+    padding: 0;
 }
 
 /* Break out larger images to be wider than the main text column
@@ -916,7 +917,6 @@ figure.image {
 
 figure img {
   border: 1px solid #ccc;
-  padding: 0;
 }
 
 figcaption {
